--- a/aset-digital/free/spatial-data.html
+++ b/aset-digital/free/spatial-data.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="../../css/theme.css" />
     <link rel="stylesheet" href="../../css/layout.css" />
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../../css/main.css" />
 
     <style>
-      /* --- HEADER FIX: RATA TENGAH & VISIBILITAS --- */
+      /* --- FIX 1: HEADER & MENU RATA TENGAH --- */
       header.header {
         background-color: white !important;
         position: fixed;
@@ -33,22 +33,22 @@
         align-items: center;
         height: 100%;
         padding: 0 40px;
+        max-width: 1400px;
+        margin: 0 auto;
       }
 
       .logo { flex: 0 0 120px; }
 
-      /* Memaksa Menu di Tengah secara proporsional */
       .nav {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: center; /* Menu Desktop di Tengah */
         flex: 1;
-        gap: clamp(10px, 2vw, 30px);
+        gap: 30px;
       }
 
-      /* Tombol Kontak Hijau Gelap Lontara */
       .nav-link-cta {
-        background-color: #123b3a !important;
+        background-color: #123b3a !important; /* Hijau Lontara */
         color: white !important;
         padding: 10px 22px;
         border-radius: 8px;
@@ -56,9 +56,9 @@
         text-decoration: none;
       }
 
-      /* FIX: STYLING HAMBURGER AGAR TERLIHAT */
+      /* --- FIX 2: MOBILE HAMBURGER VIEW (SOLUSI MENU KOSONG) --- */
       .nav-toggle {
-        display: none; /* Sembunyi di desktop */
+        display: none;
         flex-direction: column;
         justify-content: space-between;
         width: 28px;
@@ -66,114 +66,68 @@
         background: transparent;
         border: none;
         cursor: pointer;
-        padding: 0;
         z-index: 3100;
       }
 
       .nav-toggle span {
         width: 100%;
         height: 3px;
-        background-color: #123b3a; /* Warna garis hamburger */
+        background-color: #123b3a;
         border-radius: 10px;
-        transition: 0.3s;
       }
 
-      /* --- CONTENT SECTION: HERO --- */
-      .hero-boundaries {
-        padding: 220px 0 100px;
-        background: linear-gradient(to bottom, #f8fafc, #f1f5f9);
-        text-align: center;
-        border-bottom: 1px solid var(--border);
+      /* Gaya Menu saat Aktif di Mobile */
+      @media (max-width: 992px) {
+        .nav {
+          display: none; /* Sembunyi secara default */
+          flex-direction: column;
+          position: fixed;
+          top: 80px;
+          left: 0;
+          width: 100%;
+          background: white;
+          padding: 40px 20px;
+          gap: 20px;
+          box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+          z-index: 2900;
+          text-align: center;
+        }
+
+        .nav.active {
+          display: flex; /* MUNCULKAN ISI MENU */
+        }
+
+        .nav-toggle { display: flex; }
+        .nav-item { width: 100%; }
+        .nav-link-cta { display: block; margin-top: 10px; }
       }
 
-      /* --- DOWNLOAD BOX: PROPORSIONAL & TENGAH --- */
-      .main-content-wrapper {
-        max-width: 1100px;
-        margin: -60px auto 100px;
-        padding: 0 20px;
-        position: relative;
-        z-index: 10;
-      }
-
+      /* --- CONTENT & DOWNLOAD BOX --- */
+      .hero-boundaries { padding: 220px 0 100px; background: linear-gradient(to bottom, #f8fafc, #f1f5f9); text-align: center; }
       .download-card {
-        background: white;
-        border: 1px solid var(--border);
-        border-radius: 32px;
-        padding: 60px;
-        box-shadow: 0 40px 80px rgba(0, 0, 0, 0.05);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        background: white; border: 1px solid var(--border); border-radius: 32px; padding: 60px;
+        box-shadow: 0 40px 80px rgba(0, 0, 0, 0.05); margin: -60px auto 100px;
+        max-width: 900px; display: flex; flex-direction: column; align-items: center;
       }
-
-      .preview-grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 25px;
-        width: 100%;
-        margin: 40px 0;
-      }
-
-      .preview-item {
-        background: #f8fafc;
-        border: 1px solid var(--border);
-        border-radius: 16px;
-        overflow: hidden;
-      }
-
-      .map-frame {
-        height: 200px;
-        background: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 15px;
-      }
-
-      .map-frame img {
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: contain; /* FIX: Peta tidak terpotong */
-      }
-
-      .action-panel {
-        background: var(--bg-light);
-        border: 2px dashed var(--border);
-        border-radius: 24px;
-        padding: 40px;
-        width: 100%;
-        max-width: 500px;
-        text-align: center;
-      }
+      .preview-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; width: 100%; margin: 30px 0; }
+      .map-frame { height: 180px; background: white; border: 1px solid var(--border); border-radius: 12px; display: flex; align-items: center; justify-content: center; padding: 10px; overflow: hidden; }
+      .map-frame img { max-width: 100%; max-height: 100%; object-fit: contain; } /* FIX: Peta Tidak Terpotong */
 
       .btn-gis-premium {
-        background-color: #123b3a;
-        color: white !important;
-        padding: 18px;
-        border-radius: 12px;
-        font-weight: 700;
-        text-decoration: none;
-        display: block;
-        margin-bottom: 12px;
-        width: 100%;
-        transition: 0.3s;
+        background-color: #123b3a; color: white !important; padding: 18px; border-radius: 12px;
+        font-weight: 700; text-decoration: none; display: block; width: 100%; max-width: 450px;
+        margin-bottom: 12px; transition: 0.3s; text-align: center;
       }
+      .btn-gis-premium:hover { background-color: var(--accent); transform: translateY(-3px); }
 
-      /* --- MEDIA QUERIES --- */
-      @media (max-width: 992px) {
-        .nav { display: none; }
-        .nav-toggle { display: flex; } /* Tampilkan hamburger di mobile */
-        .preview-grid { grid-template-columns: 1fr; }
-        .download-card { padding: 40px 25px; }
-      }
+      @media (max-width: 600px) { .preview-grid { grid-template-columns: 1fr; } .download-card { padding: 40px 20px; } }
     </style>
   </head>
 
   <body>
-    <div class="nav-overlay" id="nav-overlay"></div>
+    <div class="nav-overlay" id="nav-overlay" style="position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:2500; display:none;"></div>
 
     <header class="header" id="header">
-      <div class="progress-bar" id="progress-bar"></div>
       <div class="container nav-container">
         <div class="logo">
           <a href="../../beranda.html">
@@ -182,18 +136,15 @@
         </div>
 
         <nav class="nav" id="nav-menu">
-          <button class="nav-close" id="nav-close" aria-label="Tutup Menu">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+          <button class="nav-close" id="nav-close" style="display:none;"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
           </button>
-
           <div class="nav-item"><a href="../../layanan/layanan.html">Layanan</a></div>
           <div class="nav-item"><a href="../../portofolio/portofolio.html">Portofolio</a></div>
           <div class="nav-item"><a href="../../artikel/artikel.html">Artikel</a></div>
           <div class="nav-item"><a href="../../publikasi/publikasi.html">Publikasi</a></div>
           <div class="nav-item"><a href="../aset-digital.html" class="active">Aset Digital</a></div>
           <div class="nav-item"><a href="../../tentang/tentang.html">Tentang</a></div>
-
-          <div class="nav-item nav-item-cta">
+          <div class="nav-item">
             <a href="../../kontak/kontak.html" class="nav-link-cta">Kontak</a>
           </div>
         </nav>
@@ -207,38 +158,53 @@
     <main>
       <section class="hero-boundaries">
         <div class="container">
-          <h1 style="font-size: 3.2rem; font-weight: 800; color: var(--primary);">Dataset Batas Administrasi</h1>
-          <p style="font-size: 1.2rem; color: var(--text-muted); margin-top: 20px;">Data spasial resmi BIG 2024 yang divalidasi topologi.</p>
+          <h1 style="font-size: 3rem; font-weight: 800; color: var(--primary);">Dataset Batas Administrasi Indonesia</h1>
+          <p style="font-size: 1.2rem; color: var(--text-muted); margin-top: 20px;">Data spasial resmi BIG 2024 untuk riset dan industri.</p>
         </div>
       </section>
 
-      <div class="main-content-wrapper">
+      <div class="container">
         <div class="download-card">
-          <h2 style="font-size: 1.8rem; font-weight: 800; color: var(--primary);">Pratinjau & Unduh</h2>
+          <h2 style="font-size: 1.8rem; font-weight: 800; color: var(--primary);">Pratinjau Dataset</h2>
           
           <div class="preview-grid">
             <div class="preview-item">
-              <div class="map-frame"><img src="../images/prov-peta-adm.png" alt="Prov"></div>
-              <div style="padding:10px; font-weight:800; font-size:0.8rem; text-align:center;">Peta Provinsi</div>
+              <div class="map-frame"><img src="../images/prov-peta-adm.png" alt="Peta Provinsi"></div>
+              <div style="padding:10px; font-weight:800; font-size:0.8rem; text-align:center;">Provinsi</div>
             </div>
             <div class="preview-item">
-              <div class="map-frame"><img src="../images/kab-peta-adm.png" alt="Kab"></div>
-              <div style="padding:10px; font-weight:800; font-size:0.8rem; text-align:center;">Peta Kabupaten</div>
+              <div class="map-frame"><img src="../images/kab-peta-adm.png" alt="Peta Kabupaten"></div>
+              <div style="padding:10px; font-weight:800; font-size:0.8rem; text-align:center;">Kabupaten</div>
             </div>
           </div>
 
-          <div class="action-panel">
+          <div style="background:var(--bg-light); border:2px dashed var(--border); border-radius:24px; padding:40px; width:100%; max-width:550px; margin-top:20px; text-align:center;">
             <span style="font-weight:800; color:var(--accent); letter-spacing:2px; text-transform:uppercase; font-size:0.8rem; display:block; margin-bottom:25px;">Free Dataset</span>
             <a href="https://drive.google.com/file/d/1i-7YiqaVlBJ_f8crLmXo6fmJYfaH5dvV/view" target="_blank" class="btn-gis-premium">Unduh Data Provinsi (.shp)</a>
-            <a href="https://drive.google.com/file/d/16bf1SimNf_kIO3qNzaDMwYJNL3foWgj9/view" target="_blank" class="btn-gis-premium">Unduh Data Kabupaten (.shp)</a>
-            <p style="font-size: 0.8rem; color: var(--text-muted); margin-top: 20px;">Format: Shapefile (WGS 84)</p>
+            <a href="https://drive.google.com/file/d/16bf1SimNf_kIO3qNzaDMwYJNL3foWgj9/view" target="_blank" class="btn-download-gis btn-gis-premium">Unduh Data Kabupaten (.shp)</a>
+            <p style="font-size: 0.8rem; color: var(--text-muted); margin-top: 20px;">Update: Jan 2024 • Format: Shapefile</p>
           </div>
         </div>
       </div>
     </main>
 
+    <script>
+      /* --- JAVASCRIPT UNTUK AKTIVASI MENU MOBILE --- */
+      const toggleBtn = document.getElementById('nav-toggle');
+      const navMenu = document.getElementById('nav-menu');
+      const overlay = document.getElementById('nav-overlay');
+
+      toggleBtn.addEventListener('click', () => {
+        navMenu.classList.toggle('active');
+        overlay.style.display = navMenu.classList.contains('active') ? 'block' : 'none';
+      });
+
+      overlay.addEventListener('click', () => {
+        navMenu.classList.remove('active');
+        overlay.style.display = 'none';
+      });
+    </script>
     <script src="../../js/utils.js"></script>
     <script src="../../js/animation.js"></script>
-    <script src="../../js/main.js"></script>
   </body>
 </html>
