--- a/aset-digital/free/spatial-data.html
+++ b/aset-digital/free/spatial-data.html
@@ -6,8 +6,6 @@
     <title>Dataset Batas Administrasi Indonesia 2024 | Lontara Free Resources</title>
 
     <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="../../css/theme.css" />
@@ -16,7 +14,7 @@
     <link rel="stylesheet" href="../../css/main.css" />
 
     <style>
-      /* --- FIX 1: HEADER & MENU RATA TENGAH --- */
+      /* --- HEADER FIX: DESKTOP RATA TENGAH --- */
       header.header {
         background-color: white !important;
         position: fixed;
@@ -37,14 +35,14 @@
         margin: 0 auto;
       }
 
-      .logo { flex: 0 0 120px; }
+      .logo { flex: 0 0 120px; z-index: 3101; }
 
       .nav {
         display: flex;
         align-items: center;
         justify-content: center; /* Menu Desktop di Tengah */
         flex: 1;
-        gap: 30px;
+        gap: 25px;
       }
 
       .nav-link-cta {
@@ -56,7 +54,7 @@
         text-decoration: none;
       }
 
-      /* --- FIX 2: MOBILE HAMBURGER VIEW (SOLUSI MENU KOSONG) --- */
+      /* --- FIX: SIDE DRAWER MENU (SLIDE DARI SAMPING) --- */
       .nav-toggle {
         display: none;
         flex-direction: column;
@@ -66,43 +64,37 @@
         background: transparent;
         border: none;
         cursor: pointer;
-        z-index: 3100;
+        z-index: 3105; /* Di atas segalanya */
       }
+      .nav-toggle span { width: 100%; height: 3px; background-color: #123b3a; border-radius: 10px; transition: 0.3s; }
 
-      .nav-toggle span {
-        width: 100%;
-        height: 3px;
-        background-color: #123b3a;
-        border-radius: 10px;
-      }
-
-      /* Gaya Menu saat Aktif di Mobile */
       @media (max-width: 992px) {
         .nav {
-          display: none; /* Sembunyi secara default */
-          flex-direction: column;
           position: fixed;
-          top: 80px;
-          left: 0;
-          width: 100%;
+          top: 0;
+          right: -100%; /* Sembunyikan di kanan layar */
+          width: 280px;
+          height: 100vh;
           background: white;
-          padding: 40px 20px;
-          gap: 20px;
-          box-shadow: 0 15px 30px rgba(0,0,0,0.1);
-          z-index: 2900;
-          text-align: center;
+          flex-direction: column;
+          justify-content: flex-start;
+          padding: 100px 30px;
+          gap: 25px;
+          box-shadow: -10px 0 30px rgba(0,0,0,0.1);
+          transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1); /* Animasi slide halus */
+          z-index: 3100;
         }
 
         .nav.active {
-          display: flex; /* MUNCULKAN ISI MENU */
+          right: 0; /* Slide ke posisi aktif */
         }
 
         .nav-toggle { display: flex; }
-        .nav-item { width: 100%; }
-        .nav-link-cta { display: block; margin-top: 10px; }
+        .nav-item { width: 100%; text-align: left; }
+        .nav-link-cta { display: block; text-align: center; margin-top: 15px; }
       }
 
-      /* --- CONTENT & DOWNLOAD BOX --- */
+      /* --- CONTENT STYLING --- */
       .hero-boundaries { padding: 220px 0 100px; background: linear-gradient(to bottom, #f8fafc, #f1f5f9); text-align: center; }
       .download-card {
         background: white; border: 1px solid var(--border); border-radius: 32px; padding: 60px;
@@ -111,21 +103,21 @@
       }
       .preview-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; width: 100%; margin: 30px 0; }
       .map-frame { height: 180px; background: white; border: 1px solid var(--border); border-radius: 12px; display: flex; align-items: center; justify-content: center; padding: 10px; overflow: hidden; }
-      .map-frame img { max-width: 100%; max-height: 100%; object-fit: contain; } /* FIX: Peta Tidak Terpotong */
+      .map-frame img { max-width: 100%; max-height: 100%; object-fit: contain; } /* Peta tidak terpotong */
 
-      .btn-gis-premium {
+      .btn-download-premium {
         background-color: #123b3a; color: white !important; padding: 18px; border-radius: 12px;
         font-weight: 700; text-decoration: none; display: block; width: 100%; max-width: 450px;
-        margin-bottom: 12px; transition: 0.3s; text-align: center;
+        margin-bottom: 12px; transition: 0.3s; text-align: center; box-shadow: 0 5px 15px rgba(18,59,58,0.1);
       }
-      .btn-gis-premium:hover { background-color: var(--accent); transform: translateY(-3px); }
+      .btn-download-premium:hover { background-color: var(--accent); transform: translateY(-3px); }
 
       @media (max-width: 600px) { .preview-grid { grid-template-columns: 1fr; } .download-card { padding: 40px 20px; } }
     </style>
   </head>
 
   <body>
-    <div class="nav-overlay" id="nav-overlay" style="position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:2500; display:none;"></div>
+    <div class="nav-overlay" id="nav-overlay" style="position:fixed; inset:0; background:rgba(0,0,0,0.4); z-index:3050; display:none; backdrop-filter: blur(2px);"></div>
 
     <header class="header" id="header">
       <div class="container nav-container">
@@ -136,17 +128,13 @@
         </div>
 
         <nav class="nav" id="nav-menu">
-          <button class="nav-close" id="nav-close" style="display:none;"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
-          </button>
           <div class="nav-item"><a href="../../layanan/layanan.html">Layanan</a></div>
           <div class="nav-item"><a href="../../portofolio/portofolio.html">Portofolio</a></div>
           <div class="nav-item"><a href="../../artikel/artikel.html">Artikel</a></div>
           <div class="nav-item"><a href="../../publikasi/publikasi.html">Publikasi</a></div>
           <div class="nav-item"><a href="../aset-digital.html" class="active">Aset Digital</a></div>
           <div class="nav-item"><a href="../../tentang/tentang.html">Tentang</a></div>
-          <div class="nav-item">
-            <a href="../../kontak/kontak.html" class="nav-link-cta">Kontak</a>
-          </div>
+          <a href="../../kontak/kontak.html" class="nav-link-cta">Kontak</a>
         </nav>
 
         <button class="nav-toggle" id="nav-toggle" aria-label="Buka Menu">
@@ -158,8 +146,8 @@
     <main>
       <section class="hero-boundaries">
         <div class="container">
-          <h1 style="font-size: 3rem; font-weight: 800; color: var(--primary);">Dataset Batas Administrasi Indonesia</h1>
-          <p style="font-size: 1.2rem; color: var(--text-muted); margin-top: 20px;">Data spasial resmi BIG 2024 untuk riset dan industri.</p>
+          <h1 style="font-size: 3rem; font-weight: 800; color: var(--primary);">Dataset Batas Administrasi</h1>
+          <p style="font-size: 1.2rem; color: var(--text-muted); margin-top: 20px;">Data spasial resmi BIG 2024 yang divalidasi topologi.</p>
         </div>
       </section>
 
@@ -169,19 +157,19 @@
           
           <div class="preview-grid">
             <div class="preview-item">
-              <div class="map-frame"><img src="../images/prov-peta-adm.png" alt="Peta Provinsi"></div>
+              <div class="map-frame"><img src="../images/prov-peta-adm.png" alt="Prov"></div>
               <div style="padding:10px; font-weight:800; font-size:0.8rem; text-align:center;">Provinsi</div>
             </div>
             <div class="preview-item">
-              <div class="map-frame"><img src="../images/kab-peta-adm.png" alt="Peta Kabupaten"></div>
+              <div class="map-frame"><img src="../images/kab-peta-adm.png" alt="Kab"></div>
               <div style="padding:10px; font-weight:800; font-size:0.8rem; text-align:center;">Kabupaten</div>
             </div>
           </div>
 
-          <div style="background:var(--bg-light); border:2px dashed var(--border); border-radius:24px; padding:40px; width:100%; max-width:550px; margin-top:20px; text-align:center;">
+          <div style="background:var(--bg-light); border:2px dashed var(--border); border-radius:24px; padding:40px; width:100%; max-width:500px; margin-top:20px; text-align:center;">
             <span style="font-weight:800; color:var(--accent); letter-spacing:2px; text-transform:uppercase; font-size:0.8rem; display:block; margin-bottom:25px;">Free Dataset</span>
-            <a href="https://drive.google.com/file/d/1i-7YiqaVlBJ_f8crLmXo6fmJYfaH5dvV/view" target="_blank" class="btn-gis-premium">Unduh Data Provinsi (.shp)</a>
-            <a href="https://drive.google.com/file/d/16bf1SimNf_kIO3qNzaDMwYJNL3foWgj9/view" target="_blank" class="btn-download-gis btn-gis-premium">Unduh Data Kabupaten (.shp)</a>
+            <a href="https://drive.google.com/file/d/1i-7YiqaVlBJ_f8crLmXo6fmJYfaH5dvV/view" target="_blank" class="btn-download-premium">Unduh Data Provinsi (.shp)</a>
+            <a href="https://drive.google.com/file/d/16bf1SimNf_kIO3qNzaDMwYJNL3foWgj9/view" target="_blank" class="btn-download-premium">Unduh Data Kabupaten (.shp)</a>
             <p style="font-size: 0.8rem; color: var(--text-muted); margin-top: 20px;">Update: Jan 2024 • Format: Shapefile</p>
           </div>
         </div>
@@ -189,7 +177,6 @@
     </main>
 
     <script>
-      /* --- JAVASCRIPT UNTUK AKTIVASI MENU MOBILE --- */
       const toggleBtn = document.getElementById('nav-toggle');
       const navMenu = document.getElementById('nav-menu');
       const overlay = document.getElementById('nav-overlay');
@@ -197,14 +184,28 @@
       toggleBtn.addEventListener('click', () => {
         navMenu.classList.toggle('active');
         overlay.style.display = navMenu.classList.contains('active') ? 'block' : 'none';
+        
+        // Animasi icon hamburger menjadi silang (opsional)
+        const spans = toggleBtn.getElementsByTagName('span');
+        if(navMenu.classList.contains('active')) {
+          spans[0].style.transform = 'rotate(45deg) translate(5px, 5px)';
+          spans[1].style.opacity = '0';
+          spans[2].style.transform = 'rotate(-45deg) translate(6px, -7px)';
+        } else {
+          spans[0].style.transform = 'none';
+          spans[1].style.opacity = '1';
+          spans[2].style.transform = 'none';
+        }
       });
 
       overlay.addEventListener('click', () => {
         navMenu.classList.remove('active');
         overlay.style.display = 'none';
+        const spans = toggleBtn.getElementsByTagName('span');
+        spans[0].style.transform = 'none';
+        spans[1].style.opacity = '1';
+        spans[2].style.transform = 'none';
       });
     </script>
-    <script src="../../js/utils.js"></script>
-    <script src="../../js/animation.js"></script>
   </body>
 </html>
