--- a/aset-digital/aset-digital.html
+++ b/aset-digital/aset-digital.html
@@ -259,6 +259,17 @@
           </h2>
 
           <div class="grid-3 align-start">
+                       <div class="resource-card reveal-init">
+              <h3>Shapefile Batas Administrasi Indonesia</h3>
+              <p>
+                Kumpulan data vektor (Geologi, Jenis Tanah, LULC) area simulasi
+                Sub DAS Tanralili untuk keperluan latihan analisis spasial.
+              </p>
+              <a href="free/admin-boundaries.html" class="btn-download btn-free"
+                >Unduh Data &rarr;</a
+              >
+            </div>
+            
             <div class="resource-card reveal-init">
               <h3>WebGIS Basic Template</h3>
               <p>
@@ -381,3 +392,4 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
