--- a/aset-digital/free/admin-boundaries.html
+++ b/aset-digital/free/admin-boundaries.html
@@ -1,19 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Dataset Batas Administrasi Indonesia 2024 | Lontara</title>
 
     <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="../../css/theme.css" />
     <link rel="stylesheet" href="../../css/layout.css" />
@@ -21,10 +16,7 @@
     <link rel="stylesheet" href="../../css/main.css" />
 
     <style>
-      /* ===============================
-   HERO
-================================ */
-
+      /* --- HERO SECTION: Menggunakan Jarak Aman 180px --- */
       .hero-boundaries {
         padding: 180px 0 100px;
         background: linear-gradient(to bottom, #f8fafc, #f1f5f9);
@@ -32,10 +24,7 @@
         border-bottom: 1px solid var(--border);
       }
 
-      /* ===============================
-   DOWNLOAD CARD
-================================ */
-
+      /* --- DOWNLOAD CARD: Arsitektur Utama Lontara --- */
       .download-card {
         background: white;
         border: 1px solid var(--border);
@@ -49,8 +38,7 @@
         align-items: center;
       }
 
-      /* Preview Grid */
-
+      /* Preview Grid & Frame */
       .preview-grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -71,14 +59,14 @@
         overflow: hidden;
       }
 
+      /* Memastikan Peta Tidak Terpotong */
       .map-frame img {
         max-width: 100%;
         max-height: 100%;
         object-fit: contain;
       }
 
-      /* Download Button */
-
+      /* Tombol Unduh GIS Proporsional */
       .btn-download-gis {
         background: var(--primary);
         color: white !important;
@@ -100,73 +88,36 @@
       }
 
       @media (max-width: 600px) {
-        .preview-grid {
-          grid-template-columns: 1fr;
-        }
-        .download-card {
-          padding: 40px 20px;
-        }
+        .preview-grid { grid-template-columns: 1fr; }
+        .download-card { padding: 40px 20px; }
       }
     </style>
   </head>
 
   <body>
-    <!-- ===============================
-     NAV OVERLAY (GLOBAL SYSTEM)
-================================ -->
     <div class="nav-overlay" id="nav-overlay"></div>
 
-    <!-- ===============================
-     HEADER (STANDARD LONTARA)
-================================ -->
     <header class="header" id="header">
       <div class="progress-bar" id="progress-bar"></div>
 
       <div class="container nav-container">
         <div class="logo">
           <a href="../../beranda.html">
-            <img
-              src="../../assets/images/logo.png"
-              alt="Lontara Logo"
-              width="120"
-              height="38"
-            />
+            <img src="../../assets/images/logo.png" alt="Lontara Logo" width="120" height="38" />
           </a>
         </div>
 
         <nav class="nav" id="nav-menu">
           <button class="nav-close" id="nav-close" aria-label="Tutup Menu">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-            >
-              <line x1="18" y1="6" x2="6" y2="18"></line>
-              <line x1="6" y1="6" x2="18" y2="18"></line>
-            </svg>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
           </button>
 
-          <div class="nav-item">
-            <a href="../../layanan/layanan.html">Layanan</a>
-          </div>
-          <div class="nav-item">
-            <a href="../../portofolio/portofolio.html">Portofolio</a>
-          </div>
-          <div class="nav-item">
-            <a href="../../artikel/artikel.html">Artikel</a>
-          </div>
-          <div class="nav-item">
-            <a href="../../publikasi/publikasi.html">Publikasi</a>
-          </div>
-          <div class="nav-item">
-            <a href="../aset-digital.html" class="active">Aset Digital</a>
-          </div>
-          <div class="nav-item">
-            <a href="../../tentang/tentang.html">Tentang</a>
-          </div>
+          <div class="nav-item"><a href="../../layanan/layanan.html">Layanan</a></div>
+          <div class="nav-item"><a href="../../portofolio/portofolio.html">Portofolio</a></div>
+          <div class="nav-item"><a href="../../artikel/artikel.html">Artikel</a></div>
+          <div class="nav-item"><a href="../../publikasi/publikasi.html">Publikasi</a></div>
+          <div class="nav-item"><a href="../aset-digital.html" class="active">Aset Digital</a></div>
+          <div class="nav-item"><a href="../../tentang/tentang.html">Tentang</a></div>
 
           <div class="nav-item nav-item-cta">
             <a href="../../kontak/kontak.html" class="nav-link-cta">Kontak</a>
@@ -181,156 +132,50 @@
       </div>
     </header>
 
-    <!-- ===============================
-     MAIN CONTENT
-================================ -->
-
     <main>
       <section class="hero-boundaries">
         <div class="container">
-          <a
-            href="../aset-digital.html"
-            style="
-              background: var(--primary);
-              color: white;
-              padding: 10px 20px;
-              border-radius: 10px;
-              text-decoration: none;
-              font-weight: 800;
-              display: inline-block;
-              margin-bottom: 30px;
-            "
-          >
+          <a href="../aset-digital.html" style="background: var(--primary); color: white; padding: 10px 20px; border-radius: 10px; text-decoration: none; font-weight: 800; display: inline-block; margin-bottom: 30px;">
             ← Kembali ke Aset Digital
           </a>
 
-          <h1
-            style="font-size: 3.2rem; font-weight: 800; color: var(--primary)"
-          >
-            Dataset Batas Administrasi
-          </h1>
-
-          <p
-            style="
-              font-size: 1.25rem;
-              color: var(--text-muted);
-              margin-top: 20px;
-            "
-          >
-            Akses data spasial resmi BIG 2024 tingkat Nasional (Provinsi, Kab,
-            Kec, Desa).
+          <h1 style="font-size: 3.2rem; font-weight: 800; color: var(--primary)">Dataset Batas Administrasi</h1>
+          <p style="font-size: 1.25rem; color: var(--text-muted); margin-top: 20px;">
+            Akses data spasial resmi BIG 2024 tingkat Nasional (Provinsi, Kab, Kec, Desa).
           </p>
         </div>
       </section>
 
       <div class="container">
         <div class="download-card">
-          <h2 style="font-size: 2rem; font-weight: 800; color: var(--primary)">
-            Pratinjau & Unduh
-          </h2>
-
+          <h2 style="font-size: 2rem; font-weight: 800; color: var(--primary)">Pratinjau & Unduh</h2>
+          
           <div class="preview-grid">
-            <div class="map-frame">
-              <img src="../images/prov-peta-adm.png" />
-            </div>
-            <div class="map-frame">
-              <img src="../images/kab-peta-adm.png" />
-            </div>
-            <div class="map-frame">
-              <img src="../images/kec-peta-adm.png" />
-            </div>
-            <div class="map-frame">
-              <img src="../images/desa-peta-adm.png" />
-            </div>
+            <div class="map-frame"><img src="../images/prov-peta-adm.png" alt="Provinsi" /></div>
+            <div class="map-frame"><img src="../images/kab-peta-adm.png" alt="Kabupaten" /></div>
+            <div class="map-frame"><img src="../images/kec-peta-adm.png" alt="Kecamatan" /></div>
+            <div class="map-frame"><img src="../images/desa-peta-adm.png" alt="Desa" /></div>
           </div>
 
-          <div
-            style="
-              background: var(--bg-light);
-              border: 2px dashed var(--border);
-              border-radius: 28px;
-              padding: 50px;
-              width: 100%;
-              max-width: 650px;
-              margin-top: 20px;
-              text-align: center;
-            "
-          >
-            <span
-              style="
-                font-weight: 800;
-                color: var(--accent);
-                letter-spacing: 2px;
-                text-transform: uppercase;
-                font-size: 0.85rem;
-                display: block;
-                margin-bottom: 25px;
-              "
-            >
+          <div style="background: var(--bg-light); border: 2px dashed var(--border); border-radius: 28px; padding: 50px; width: 100%; max-width: 650px; margin-top: 20px; text-align: center;">
+            <span style="font-weight: 800; color: var(--accent); letter-spacing: 2px; text-transform: uppercase; font-size: 0.85rem; display: block; margin-bottom: 25px;">
               Free Dataset
             </span>
 
-            <a
-              href="https://drive.google.com/file/d/1i-7YiqaVlBJ_f8crLmXo6fmJYfaH5dvV/view"
-              target="_blank"
-              class="btn-download-gis"
-              >Unduh Data Provinsi (.shp)</a
-            >
+            <a href="https://drive.google.com/file/d/1i-7YiqaVlBJ_f8crLmXo6fmJYfaH5dvV/view" target="_blank" class="btn-download-gis">Unduh Data Provinsi (.shp)</a>
+            <a href="https://drive.google.com/file/d/16bf1SimNf_kIO3qNzaDMwYJNL3foWgj9/view" target="_blank" class="btn-download-gis">Unduh Data Kabupaten (.shp)</a>
+            <a href="https://drive.google.com/file/d/1xQkTCOEvGKNbRsxfCzC1EjvTgnKDfLYK/view" target="_blank" class="btn-download-gis">Unduh Data Kecamatan (.shp)</a>
+            <a href="https://drive.google.com/file/d/19rQnH1lu9fHzyXAnZifKcLA1hB2RzDKx/view" target="_blank" class="btn-download-gis">Unduh Data Desa (.shp)</a>
 
-            <a
-              href="https://drive.google.com/file/d/16bf1SimNf_kIO3qNzaDMwYJNL3foWgj9/view"
-              target="_blank"
-              class="btn-download-gis"
-              >Unduh Data Kabupaten (.shp)</a
-            >
-
-            <a
-              href="https://drive.google.com/file/d/1xQkTCOEvGKNbRsxfCzC1EjvTgnKDfLYK/view"
-              target="_blank"
-              class="btn-download-gis"
-              >Unduh Data Kecamatan (.shp)</a
-            >
-
-            <a
-              href="https://drive.google.com/file/d/19rQnH1lu9fHzyXAnZifKcLA1hB2RzDKx/view"
-              target="_blank"
-              class="btn-download-gis"
-              >Unduh Data Desa (.shp)</a
-            >
-
-            <p
-              style="
-                font-size: 0.85rem;
-                color: var(--text-muted);
-                margin-top: 25px;
-              "
-            >
-              Update: Jan 2024 • Sumber: BIG
-            </p>
+            <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: 25px;">Update: Jan 2024 • Sumber: BIG</p>
           </div>
         </div>
       </div>
     </main>
 
-    <!-- ===============================
-     FOOTER
-================================ -->
-
-    <footer
-      style="
-        padding: 60px 0;
-        text-align: center;
-        border-top: 1px solid var(--border);
-      "
-    >
-      <p style="font-size: 0.9rem; color: var(--text-muted)">
-        © 2026 Lontara Studio.
-      </p>
+    <footer style="padding: 60px 0; text-align: center; border-top: 1px solid var(--border);">
+      <p style="font-size: 0.9rem; color: var(--text-muted)">© 2026 Lontara Studio.</p>
     </footer>
-
-    <!-- ===============================
-     GLOBAL JS (WAJIB)
-================================ -->
 
     <script src="../../js/utils.js"></script>
     <script src="../../js/animation.js"></script>
